show stub activity in FE

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.lchlebda</groupId>
     <artifactId>hamster</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>hamster</name>
     <description>hamster</description>
     <properties>
