- integration with Strava service  - add debuggin in docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,7 @@
 FROM openjdk:17-jdk-alpine
 COPY ./target/*.jar /hamster.jar
+WORKDIR /opt/workdir/
+ARG CERT="ZscalerRootCA.pem"
+COPY $CERT /opt/workdir/
+RUN keytool -importcert -file $CERT -alias $CERT -cacerts -storepass changeit -noprompt
 ENTRYPOINT ["java","-jar","/hamster.jar"]
