--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -14,6 +18,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
+    "typescript": "^4.6.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
