--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.8.0",
     "reactstrap": "^8.10.0",
     "typescript": "^4.6.3",
     "web-vitals": "^1.1.2"
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-table": "^7.7.12"
   }
 }
